--- a/Music.html
+++ b/Music.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="theme-color" content="#02121b">
   <link rel="icon" sizes="192x192" href="https://1nrp.github.io/1/Images/N-Logo1.png">
-  <title> Music </title>
+  <title> Music Player </title>
 <style>
 body {
   background-color: #0d2136;
@@ -50,6 +50,7 @@ body {
   z-index: 100;
   right: 10px;
   font-size: 14px;
+  padding: 6px 10px;
   font-weight: 1000;
   transition: transform 0.4s ease;
   color: #e2df12;
@@ -112,8 +113,9 @@ body {
   position: fixed;
   bottom: 4%;
   left: 4%;
+  min-width: 70vw;
   padding: 4px;
-  background-color: #031b5c63;
+  background-color: #031b5ca1;
   border: solid 2px #04348f;
   margin: 2px;
   border-radius: 10px;
@@ -169,12 +171,28 @@ body {
 @keyframes Loading {
   to { rotate: 1turn } 
 }
+
+@keyframes slideOut {
+  from {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+}
+
+.removing {
+  animation: slideOut 0.5s ease-out forwards;
+}
+
 </style>
 </head>
 <body>
   <div id="loading"></div>
-  <!-- loop="loop" -->
-  <audio id="player" controls tabindex="0" src="" width="100%" autoplay ></audio> 
+  
+  <audio id="player" onended="PlayNextSong()" tabindex="0" src="" width="100%" autoplay ></audio> <!-- loop="loop" -->
 
   <div id="header">
     <textarea id='txtBox' placeholder="Example: Kaabil" value=""></textarea>
@@ -192,11 +210,15 @@ body {
       <option value="playlist">Playlist</option>
     </select>
     <br></br>
+    
     <b style="color: #fff222"> 3rd Party API : </b>
-    <input type="checkbox" id="thirdPartyApi" style="transform: translateY(10%)" ></input>
+    <input type="checkbox" id="thirdPartyApi" checked style="transform: translateY(10%)" ></input>
     <br></br>
     <b style="color: #fff222"> Auto-Play Next : </b>
     <input type="checkbox" id="autoPlay" checked style="transform: translateY(10%)" ></input>
+    <br></br>
+    <b style="color: #fff222"> Use CORS Proxy : </b>
+    <input type="checkbox" id="corsProxy" checked style="transform: translateY(10%)" ></input>
     <br></br>
     <input type="radio" id="option1" name="choice" value="video" checked>
     <label for="option1"> Video </label>
@@ -205,13 +227,17 @@ body {
   </div>
 
 <script>
-// https://api.vreden.my.id/api/v1/download/youtube/audio?url=https://www.youtube.com/watch?v=CPWEyB1Jl9g&quality=128
-// https://www.youtube.com/watch?v=CPWEyB1Jl9g
 
 // Get Element By ID Shortcut (Jquery Style).
 const ID = (elementId) => document.getElementById(elementId);
 
-let currentJson = {};
+const state = { 
+  currentJson: [],
+  currentSong: '',
+  touchstartX: 0,
+  touchendX: 0,
+  touchedElement: null
+}
 
 // Fetch JSON and view thumbnails.
 async function viewImages(playlist = null) {
@@ -224,9 +250,9 @@ async function viewImages(playlist = null) {
   const req = await fetch(url);
   const media = await req.json();
   Loading('Hide');
-  currentJson = media;
+  state.currentJson = media;
   ID('viewBox').innerHTML = '';
-  if (playlist) ID('viewBox').style.background = "linear-gradient(270deg, #792504, #031a44)";
+  ID('viewBox').style.background = !playlist && type === 'playlist' ? "linear-gradient(270deg, #792504, #031a44)" : "linear-gradient(140deg, #02364b, #793c04)";
   let count = 1;
   for ( const song of media ) {
       const { videoId, playlistId, title, channelTitle, thumbnail } = song;
@@ -245,72 +271,35 @@ async function viewImages(playlist = null) {
   }
 }
 
-ID('player').addEventListener('ended', () => {
+function PlayNextSong() {
   const autoPlay = ID('autoPlay').checked;
-  const nextSong = currentJson.shift();
+  const { currentJson, currentSong } = state;
+  const lastPlayed = currentJson.findIndex(song => song.videoId === currentSong);
+  currentJson.splice(lastPlayed, 1);
+  const nextSong = lastPlayed++ < currentJson.length ? currentJson[lastPlayed++] : currentJson[0];
   if (!autoPlay || !nextSong) return;
   PlayAudio(nextSong.videoId);
-});
-
-async function viewPlaylists() {
-  let playListName = ID('txtBox').value;
-  playListName = playListName ? playListName : 'new hindi songs';
-  Loading('Show');
-  const req = await fetch('https://1nrp.val.run/songList' + '?query=' + playListName + '&type=playlist');
-  const media = await req.json();
-  Loading('Hide');
-  currentJson = media;
-  ID('viewBox').innerHTML = '';
-  let count = 1;
-  for ( const song of media ) {
-      const { playlistId, title, channelTitle, thumbnail } = song;
-      const box = document.createElement('div');
-      box.className = 'imgBox';
-      box.innerHTML = ` 
-        <img src="${thumbnail}" onclick="GetPlayListItems('${playlistId}, playlist')" alt="Thumbnail Image" class="image">
-        <span class="songName">${count} - ${title}</span>
-        <span class="channelName">${channelTitle}</span>
-      `;
-      ID('viewBox').appendChild(box);
-      count++;
-  }
-}
-
-async function GetPlayListItems(playlistId) {
-  Loading('Show');
-  const req = await fetch('https://1nrp.val.run/playListSongs' + '?id=' + playlistId);
-  const media = await req.json();
-  Loading('Hide');
-  currentJson = media;
-  ID('viewBox').innerHTML = '';
-  let count = 1;
-  for ( const song of media ) {
-      const { videoId, title, channelTitle, thumbnail } = song;
-      const box = document.createElement('div');
-      box.className = 'imgBox';
-      box.innerHTML = ` 
-        <img src="${thumbnail}" onclick="PlayAudio('${videoId}')" alt="Thumbnail Image" class="image">
-        <span class="songName">${count} - ${title}</span>
-        <span class="channelName">${channelTitle}</span>
-      `;
-      ID('viewBox').appendChild(box);
-      count++;
-  }
-}
+};
 
 async function PlayAudio(videoId) {
     Loading('Show');
     const ThirdPartyAPI = ID('thirdPartyApi').checked;
-    const url = ThirdPartyAPI ? 'https://api.vreden.my.id/api/v1/download/youtube/audio?url=https://www.youtube.com/watch?v=' + videoId + '&quality=128' : 'https://1nrp.val.run/songUrl' + '?vid=' + videoId;
+    const useCors = ID('corsProxy').checked;
+    const url = !ThirdPartyAPI 
+                ? 'https://1nrp.val.run/songUrl' + '?vid=' + videoId
+                : !useCors
+                  ? 'https://api.vreden.my.id/api/v1/download/youtube/audio?url=https://www.youtube.com/watch?v=' + videoId + '&quality=128' 
+                  : new Request('https://cors.1nrp.workers.dev/?URL=' + encodeURIComponent('https://api.vreden.my.id/api/v1/download/youtube/audio?url=https://www.youtube.com/watch?v=' + videoId + '&quality=128'), { headers: {'Authorization': localStorage.getItem('M3U8-Access-Token') ?? prompt('Enter Cloudflare CORS Proxy Access Token :')} });
     const res = await fetch(url);
     const data = await res.json();
     Loading('Hide');
     const link = data.link ?? data.result.download.url;
     const player = ID('player');
     player.src = link;
-    const { name = 'Default' } = currentJson.find(song => song.videoId === videoId);
+    const { title = 'Default' } = state.currentJson.find(song => song.videoId === videoId);
     ID('txtBox').value = '';
-    ID('txtBox').placeholder = name;
+    ID('txtBox').placeholder = title;
+    state.currentSong = videoId;
 }
 
 function Loading(status) {
@@ -329,6 +318,78 @@ function toggleToolbar() {
     const status = toolbar.style.display;
     toolbar.style.display = status === 'none' ? 'block' : 'none';
 }
+
+function RearrangeImages() {
+  const { currentJson: media } = state;
+  for ( const song of media ) {
+      const { videoId, playlistId, title, channelTitle, thumbnail } = song;
+      const box = document.createElement('div');
+      box.className = 'imgBox';
+      const imageHtmlLine = playlistId
+        ? ` <img src="${thumbnail}" onclick="viewImages('${playlistId}')" alt="Thumbnail Image" class="image"> `
+        : ` <img src="${thumbnail}" onclick="PlayAudio('${videoId}')" alt="Thumbnail Image" class="image"> `;
+        box.innerHTML = ` 
+        ${imageHtmlLine}
+        <span class="songName">${count} - ${title}</span>
+        <span class="channelName">${channelTitle}</span>
+      `;
+      ID('viewBox').appendChild(box);
+      count++;
+  }
+}
+
+// Slide to remove.
+ID('viewBox').addEventListener('touchstart', function(event) {
+    if (event.touches.length === 1) { // single touch
+        state.touchedElement = event.target.closest('.imgBox');
+        if (state.touchedElement) {
+            state.touchstartX = event.touches[0].clientX;
+        }
+    }
+}, false);
+
+ID('viewBox').addEventListener('touchmove', function(event) {
+    if (state.touchedElement && event.touches.length === 1) {
+        const touchX = event.touches[0].clientX;
+        const deltaX = touchX - state.touchstartX;
+        if (deltaX > 0) { // right swipe
+             state.touchedElement.style.transform = `translateX(${deltaX}px)`;
+        }
+    }
+}, false);
+
+ID('viewBox').addEventListener('touchend', function(event) {
+    if (state.touchedElement) {
+        state.touchendX = event.changedTouches[0].clientX;
+        const deltaX = state.touchendX - state.touchstartX;
+
+        if (deltaX > 100) { // threshold
+            state.touchedElement.classList.add('removing');
+
+            state.touchedElement.addEventListener('animationend', () => {
+                const onclickAttr = state.touchedElement.querySelector('img').getAttribute('onclick');
+                const idMatch = onclickAttr.match(/'([^']*)'/);
+                if (idMatch && idMatch[1]) {
+                    const id = idMatch[1];
+                    const indexToRemove = state.currentJson.findIndex(song => song.videoId === id || song.playlistId === id);
+
+                    if (indexToRemove > -1) {
+                        state.currentJson.splice(indexToRemove, 1);
+                    }
+                }
+                state.touchedElement.remove();
+            });
+            RearrangeImages();
+
+        } else {
+            // Spring back if not swiped far enough.
+            state.touchedElement.style.transform = '';
+        }
+    }
+    state.touchedElement = null;
+    state.touchstartX = 0;
+    state.touchendX = 0;
+}, false);
 
 </script>
 </body>
