Add controls to audio player in Music.html

--- a/Music.html
+++ b/Music.html
@@ -192,7 +192,7 @@ body {
 <body>
   <div id="loading"></div>
   
-  <audio id="player" onended="PlayNextSong()" tabindex="0" src="" width="100%" autoplay ></audio> <!-- loop="loop" -->
+  <audio id="player" onended="PlayNextSong()" controls tabindex="0" src="" width="100%" autoplay ></audio> <!-- loop="loop" -->
 
   <div id="header">
     <textarea id='txtBox' placeholder="Example: Kaabil" value=""></textarea>
