Refactor index.html and add new link styles
Updated the HTML structure and added new links.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" sizes="192x192" href="https://1nrp.github.io/1/Images/N-Logo1.png">
   <meta charset="utf-8">
-  <title>Nihar's Websites</title>
+  <title> Nihar's Websites </title>
 </head>
 <style>
   body {
@@ -37,9 +37,9 @@
 <center>
     
     <h2>WEBPAGE LINKS</h2>
+    <p><a href="https://1nrp.vercel.app" style="background: linear-gradient(140deg, #800, #060, #004)" target="_self"> Vercel </a></p>
     <a href="code">HTML (H)</a> <a href="code-vertical">HTML (V)</a>
     <p><a href="JS-Notebook-2">NB-2</a> <a href="JS-Notebook">JS Notebook</a></p>
-    <p><a href="https://1nrp.vercel.app" target="_self">Cloud Notes</a> <a href="https://1nrp.vercel.app/Blob">Blob</a></p>
     <p><a href="hls">HLS Player For PC</a></p>
     <p><a href="Firebase-Notes">Firebase Notes</a></p>
     <p><a href="M3U8/m3u8">M3U8 To MP4</a></p>
@@ -54,5 +54,6 @@
 
 </body> 
 </html>
+
 
 
