Refactor index.html for improved structure
Updated webpage links and fixed formatting issues.

--- a/index.html
+++ b/index.html
@@ -37,16 +37,17 @@
 <center>
     
     <h2>WEBPAGE LINKS</h2>
-    <p><a href="https://1nrp.vercel.app" style="background: linear-gradient(140deg, #800, #060, #004)" target="_self"> Vercel </a></p>
     <a href="code">HTML (H)</a> <a href="code-vertical">HTML (V)</a>
-    <p><a href="JS-Notebook-2">NB-2</a> <a href="JS-Notebook">JS Notebook</a></p>
+    <p><a href="JS-Notebook-2">JavaScript Notebook</a></p>
     <p><a href="hls">HLS Player For PC</a></p>
     <p><a href="M3U8/m3u8">M3U8 To MP4</a></p>
     <p><a href="offnote">Offline Notes</a><p>
     <p><a href="Chart-Replay">Chart Replay</a></p>
     <p><a href="tboxThumbnail" style="background-color: #000; padding: 20px 60px"></a></p>
-
+    <p><a href="https://1nrp.vercel.app" style="background: linear-gradient(140deg, #800, #060, #004)" target="_self"> Vercel </a></p>
+  
 </center>
 
 </body> 
 </html>
+
